--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;1,400;500;700&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -10,24 +11,54 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --foreground-rgb: 0, 0, 0;
+    --background-start-rgb: 255, 255, 255;
+    --background-end-rgb: 255, 255, 255;
   }
 }
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+@layer base {
+  /* @font-face {
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 100 800;
+    src: url("/fonts/Inter-Variable.ttf");
+  } */
+  h1 {
+    @apply text-2xl;
+  }
+  h2 {
+    @apply text-xl;
+  }
+  h3 {
+    @apply text-lg;
+  }
+  a {
+    @apply text-blue-600 underline;
+  }
+  button {
+    @apply w-full h-10  border border-primary-400 rounded-md flex justify-center items-center shadow-md;
+  }
+  button:hover {
+    @apply border-primary-600;
+  }
+  button:active {
+    @apply bg-primary-100 shadow-inner;
+  }
+  input[type="text"] {
+    @apply w-full h-10 bg-slate-200 border border-slate-200 rounded-md px-4 py-2;
+  }
+}
+.animate-delay-2000 {
+  animation-delay: 2s;
 }
