--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;1,400;500;700&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -33,28 +32,38 @@ body {
   }
 }
 @layer base {
-  @font-face {
-    font-family: "LINE Seed Sans TH";
-    font-style: 200;
-    src: url("/fonts/LINESeedSansTH_W_Th.woff");
+  body,
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6,
+  div {
+    @apply font-mono;
   }
   @font-face {
-    font-family: "LINE Seed Sans TH";
-    font-style: normal;
-    src: url("/fonts/LINESeedSansTH_W_Rg.woff");
+    font-family: "LINE_Seed_Sans_TH";
+    font-weight: 100;
+    src: url("/fonts/LINESeedSansTH_W_Th.woff") format("woff");
   }
   @font-face {
-    font-family: "LINE Seed Sans TH";
-    font-style: 600;
-    src: url("/fonts/LINESeedSansTH_W_Bd.woff");
+    font-family: "LINE_Seed_Sans_TH";
+    font-weight: 400;
+    src: url("/fonts/LINESeedSansTH_W_Rg.woff") format("woff");
   }
   @font-face {
-    font-family: "LINE Seed Sans TH";
-    font-style: 800;
-    src: url("/fonts/LINESeedSansTH_W_XBd.woff");
+    font-family: "LINE_Seed_Sans_TH";
+    font-weight: 700;
+    src: url("/fonts/LINESeedSansTH_W_Bd.woff") format("woff");
+  }
+  @font-face {
+    font-family: "LINE_Seed_Sans_TH";
+    font-weight: 800;
+    src: url("/fonts/LINESeedSansTH_W_XBd.woff") format("woff");
   }
   h1 {
-    @apply text-2xl font;
+    @apply text-2xl;
   }
   h2 {
     @apply text-xl;
