[feat]-create-new-team

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,7 +15,9 @@
     --background-end-rgb: 255, 255, 255;
   }
 }
-
+* {
+  -webkit-user-drag: none;
+}
 body {
   box-sizing: border-box;
   padding: 0;
